fixed nav links spacing

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -24,7 +24,6 @@
   }
   .navLinks {
     width: 50%;
-    text-align: center;
     display: flex;
     justify-content: flex-end;
   }
